force-app/main/default/objects/DAM_Provider_Instance_Request__c/DAM_Provider_Instance_Request__c.object-meta.xml
<CustomObject>
	<description>Request to create a Managed Content Provider Instance</description>
	<label>DAM Provider Instance Request</label>
	<nameField>
		<label>Request Name</label>
		<type>Text</type>
	</nameField>
	<pluralLabel>DAM Provider Instance Requests</pluralLabel>
	<sharingModel>Private</sharingModel>
</CustomObject>