force-app/main/default/objects/DAM_Provider_Instance_Request__c/fields/Created_Instance_Id__c.field-meta.xml
<CustomField>
	<fullName>Created_Instance_Id__c</fullName>
	<description>Created provider instance ID</description>
	<label>Created Instance Id</label>
	<length>100</length>
	<type>Text</type>
</CustomField>