force-app/main/default/objects/DAM_Provider_Instance_Request__c/fields/Error_Message__c.field-meta.xml
<CustomField>
	<fullName>Error_Message__c</fullName>
	<description>Error message if processing fails</description>
	<label>Error Message</label>
	<length>32768</length>
	<type>LongTextArea</type>
</CustomField>