force-app/main/default/objects/DAM_Provider_Instance_Request__c/fields/Instance_Key__c.field-meta.xml
<CustomField>
	<fullName>Instance_Key__c</fullName>
	<description>Instance key value, e.g., www.salesforce.com</description>
	<label>Instance Key</label>
	<length>255</length>
	<required>true</required>
	<type>Text</type>
</CustomField>