force-app/main/default/objects/DAM_Provider_Instance_Request__c/fields/Instance_Name__c.field-meta.xml
<CustomField>
	<fullName>Instance_Name__c</fullName>
	<description>Name of the provider instance to create</description>
	<label>Instance Name</label>
	<length>80</length>
	<required>true</required>
	<type>Text</type>
</CustomField>