force-app/main/default/objects/DAM_Provider_Instance_Request__c/fields/Is_Default__c.field-meta.xml
<CustomField>
	<fullName>Is_Default__c</fullName>
	<description>Mark this provider instance as default</description>
	<defaultValue>false</defaultValue>
	<label>Is Default</label>
	<type>Checkbox</type>
</CustomField>