force-app/main/default/objects/DAM_Provider_Instance_Request__c/fields/Provider_Label__c.field-meta.xml
<CustomField>
	<fullName>Provider_Label__c</fullName>
	<description>Label of the provider, e.g., Unsplash</description>
	<label>Provider Label</label>
	<length>80</length>
	<required>true</required>
	<type>Text</type>
</CustomField>