force-app/main/default/objects/DAM_Provider_Instance_Request__c/fields/Status__c.field-meta.xml
<CustomField>
	<fullName>Status__c</fullName>
	<description>Processing status</description>
	<label>Status</label>
	<type>Picklist</type>
	<valueSet>
		<restricted>true</restricted>
		<valueSetDefinition>
			<value>
				<fullName>Pending</fullName>
				<default>true</default>
				<label>Pending</label>
			</value>
			<value>
				<fullName>Succeeded</fullName>
			</value>
			<value>
				<fullName>Failed</fullName>
			</value>
		</valueSetDefinition>
	</valueSet>
</CustomField>